@@ -1,7 +1,14 @@
-The "Free To Be OverPowered" (FTBOP) modpack is loaded with many of your favorite mods, no matter if you want to build your dream base with magic, tech or want to explore the world. But be warned you are not the only one who is free to be OP, we have let the monsters have that right too.
+The "Free To Be OverPowered" (FTBOP) modpack is loaded with many of your favorite mods, no matter if you want to build your dream base with magic, tech or want to explore the world. But be warned you are not the only one who is free to be OP, we have let the monsters have that ability too.
 
 With it's 184 mods, FTBOP has been in development since Fall of 2014 with both stability and performance as the primary focus, and now it is finally ready.
 
 Included in the pack's server list is the official FTBOP sever over at Underground Lounge. The server has no whitelist so feel free to stop by and say hello. UgL has a mature, friendly community who is very experienced with modded Minecraft. uglounge.com
 
 For a full mod list, change log, etc see the following repository. github.com/Anarcraft/FTBOP
+
+Requirements:
+Minimum of 2GB allocated RAM.
+Java 7 minimum, works with Java 8.
+
+These are the java arguments I set, your results may vary depending on your computer specifications.  Modify/disable as needed:
+-d64 -Dfml.ignorePatchDiscrepancies=true -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -XX:+UseParNewGC -XX:+UseConcMarkSweepGC
